# suppleance

./: .gitignore  app.py  data.py  pyproject.toml  railway.json  readme.md  requirements.txt  utils.py
pages/: collaborateurs.py  home.py  inventaire.py  organisation.py
