[project]
name = "suppleance"
version = "0.1.0"
description = ""
authors = [
    {name = "Julien Rey",email = "rey.julien84@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
